# cdi_dislo

./: .git_status.txt  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package-conda.yml
cdi_dislo/: .gitignore  __init__.py  cli.py  common_imports.py
cdi_dislo/calibration/: README.md  __init__.py  cdi_dislo_diffcalib.py  diffcalib.py
cdi_dislo/diff_calib_handler/: README.md  cdi_dislo_diffcalib.py
cdi_dislo/diff_calib_handler/.ipynb_checkpoints/: __init__-checkpoint.py  cdi_dislo_diffcalib-checkpoint.py
cdi_dislo/diff_utils_handler/: README.md  __init__.py  cdi_dislo_diffutils.py
cdi_dislo/diff_utils_handler/.ipynb_checkpoints/: cdi_dislo_diffutils-checkpoint.py
cdi_dislo/diffraction/: __init__.py  diffutils.py
cdi_dislo/dislo_handler/: README.md  __init__.py  cdi_dislo_dislocation.py
cdi_dislo/dislo_handler/.ipynb_checkpoints/: cdi_dislo_dislocation-checkpoint.py
cdi_dislo/dislocations/: README.md  __init__.py  dislocation.py
cdi_dislo/ewen_utilities/: CreateVTI.py  Data_treatment_utilities.py  Features.py  FilterBackground.py  Global_utilities.py  Multi_Bragg_utils.py  Object_utilities.py  Orthogonalization_real_space.py  Orthogonalization_reciprocal_space.py  PostProcessing.py  PreProcessing.py  Reconstruction.py  Reconstruction_crop_algo.py  Reconstruction_genetic.py  Single_peak_gaussian_fit.py  Spatial_resolution.py  StrainCalculation_old_version_to_move.py  StrainTiltCalculation.py  Support_transfert.py  __init__.py  alien_removal_3D_utilities.py  h5utils.py  h5utils_CITIUS.py  h5utils_PETRA.py  plot_utilities.py  specutils.py
cdi_dislo/ewen_utilities/.ipynb_checkpoints/: CreateVTI-checkpoint.py  Data_treatment_utilities-checkpoint.py  Global_utilities-checkpoint.py  Object_utilities-checkpoint.py  Orthogonalization_reciprocal_space-checkpoint.py  PreProcessing-checkpoint.py  (+9 more)
cdi_dislo/examples/: bcdi_pipeline  .ipynb
cdi_dislo/femtotools_handler/: README.md  __init__.py  cdi_dislo_femto.py
cdi_dislo/general_utilities/: README.md  __init__.py  cdi_dislo_utils.py
cdi_dislo/genetic/: genetic.py
cdi_dislo/genetic_handler/: README.md  __init__.py  cdi_dislo_genetic.py
cdi_dislo/geometry/: __init__.py  ortho_handler.py
cdi_dislo/orthogonalisation_handler/: README.md  __init__.py  cdi_dislo_ortho_handler.py
cdi_dislo/plotting/: __init__.py  linecut.py  plotutilities.py
cdi_dislo/plotutilities/: README.md  __init__.py  cdi_dislo_plotutilities.py
cdi_dislo/reco_handler/: README.md  __init__.py  cdi_dislo_reconstruction.py
cdi_dislo/reconstruction/: __init__.py  reconstruction.py
cdi_dislo/rotation/: __init__.py  rotation.py
cdi_dislo/rotation_handler/: README.md  __init__.py  cdi_dislo_rotation.py
cdi_dislo/statdiff_handler/: README.md  __init__.py  cdi_dislo_statdiff_handler.py
cdi_dislo/statistics/: __init__.py  statdiff_handler.py
cdi_dislo/utils/: README.md  utils.py
tests/: test_diffcalib.py  test_imports.py  test_rotation.py  test_statdiff_handler.py  test_utils.py
(+14 files in other folders)
